==> lizhiok/FPInterro/Libraries/MDK_LIB/RL/FlashFS/Drivers/NAND_SAM4S.c <==
#include <File_Config.h>
#include <string.h>
#include <SAM4S.H>                    /* SAM4S definitions                   */
#include "NAND_SAM4S.h"
#define NAND_HW_CS    0x00
#define NAND_HW_BUS   0x00
#define SMC_NAND_BASE     (0x60000000 + 0x1000000 * NAND_HW_CS)
#define SMC_ALE_ADDR       0x00200000
#define SMC_CLE_ADDR       0x00400000
 #define SMC_DATA *((volatile U8  *)(SMC_NAND_BASE))
 #define SMC_ADDR *((volatile U8  *)(SMC_NAND_BASE + SMC_ALE_ADDR))
 #define SMC_CMD  *((volatile U8  *)(SMC_NAND_BASE + SMC_CLE_ADDR))
 #define SMC_DATA *((volatile U16 *)(SMC_NAND_BASE))
 #define SMC_ADDR *((volatile U16 *)(SMC_NAND_BASE + SMC_ALE_ADDR))
 #define SMC_CMD  *((volatile U16 *)(SMC_NAND_BASE + SMC_CLE_ADDR))

static U32 PageRead (U32 row, U8 *buf, NAND_DRV_CFG *cfg) {
  U32 i;

  /* Write command 1 */
  WrCmd (NAND_CMD_READ1ST);

  /* Set address */
  SetPgAddr (cfg->AddrCycles, row, cfg->PageSize);

  /* Write command 2 */
  WrCmd (NAND_CMD_READ2ND);

  /* Wait until NAND ready */
  if (WaitReady() == NAND_BUSY) {
    return ERR_NAND_HW_TOUT;
  }

  /* Transfer data from the NAND chip */
  if (NAND_HW_BUS == NAND_BUS_W8) {
    /* 8-bit bus width */
    for (i = 0; i < cfg->PageSize; i += 8) {
      buf[i]   = SMC_DATA;
      buf[i+1] = SMC_DATA;
      buf[i+2] = SMC_DATA;
      buf[i+3] = SMC_DATA;
      buf[i+4] = SMC_DATA;
      buf[i+5] = SMC_DATA;
      buf[i+6] = SMC_DATA;
      buf[i+7] = SMC_DATA;
    }
  }
  else {
    /* 16-bit bus width */
    for (i = 0; i < cfg->PageSize; i += 2) {
      buf[i] = SMC_DATA;
    }
  }

  return RTV_NOERR;
}

static U32 PageWrite (U32 row, U8 *buf, NAND_DRV_CFG *cfg) {
  U32 i;

  /* Write command 1 */
  WrCmd (NAND_CMD_PROG1ST);

  /* Set address */
  SetPgAddr (cfg->AddrCycles, row, cfg->PageSize);

  /* Transfer data to the NAND chip */ 
  if (NAND_HW_BUS == NAND_BUS_W8) {
    /* 8-bit bus width */
    for (i = 0; i < cfg->PageSize; i += 8) {
      SMC_DATA = buf[i];
      SMC_DATA = buf[i+1];
      SMC_DATA = buf[i+2];
      SMC_DATA = buf[i+3];
      SMC_DATA = buf[i+4];
      SMC_DATA = buf[i+5];
      SMC_DATA = buf[i+6];
      SMC_DATA = buf[i+7];
    }
  }
  else {
    /* 16-bit bus width */
    for (i = 0; i < cfg->PageSize; i += 2) {
      SMC_DATA = ((U16)buf[i + 1] << 8) | buf[i];
    }
  }

  /* Write command 2 */
  WrCmd (NAND_CMD_PROG2ND);

  /* Wait until NAND ready */
  if (WaitReady() == NAND_BUSY) {
    return ERR_NAND_HW_TOUT;
  }

  /* Check status */
  switch (ChkStatus (NAND_STAT_FAIL)) {
    case NAND_FLAG_TOUT:
      return ERR_NAND_HW_TOUT;
    case NAND_FLAG_SET:
      return ERR_NAND_PROG;
    default:
      return RTV_NOERR;
  }
}

static U32 BlockErase (U32 row, NAND_DRV_CFG *cfg) {
  /* Write command 1 */
  WrCmd (NAND_CMD_ERASE1ST);

  /* Set address */
  SetBlAddr (cfg->AddrCycles, row, cfg->PageSize);

  /* Write command 2 */
  WrCmd (NAND_CMD_ERASE2ND);

  /* Wait until NAND ready */
  if (WaitReady() ==  NAND_BUSY) {
    return ERR_NAND_HW_TOUT;
  }

  /* Check status */
  switch (ChkStatus (NAND_STAT_FAIL)) {
    case NAND_FLAG_TOUT:
      return ERR_NAND_HW_TOUT;
    case NAND_FLAG_SET:
      return ERR_NAND_ERASE;
    default:
      return RTV_NOERR;
  }
}

static U32 UnInit (NAND_DRV_CFG *cfg) {
  /* PIO Write Protect Disable */
  PIOC->PIO_WPMR = PIO_WPDIS_KEY;
  
  /* Release pins to PIO control */
  PIOC->PIO_PER    = SMC_PIO_PDR_PIN_MSK;
  PIOC->PIO_PUER   = PIO_PUER_P18;

  /* Release chip select pin to PIO control */
#if   NAND_HW_CS == SMC_NCS0
  /* Chip enable 0: PC14 - NCS0 [nCE] */
  PIOC->PIO_PER    = PIO_PER_P14;
#elif NAND_HW_CS == SMC_NCS1
  /* Chip enable 1: PC15 - NCS1 [nCE] */
  PIOC->PIO_PER    = PIO_PER_P15;
#elif NAND_HW_CS == SMC_NCS2
  /* Chip enable 2: PA22 - NCS2 [nCE] */
  PIOA->PIO_PER    = PIO_PER_P22;
#elif NAND_HW_CS == SMC_NCS3
  /* Chip enable 3: PC12 - NCS3 [nCE] */
  PIOC->PIO_PER    = PIO_PER_P12;
#endif

  /* PIO Write Protect Enable */
  PIOC->PIO_WPMR = PIO_WPEN_KEY;
  return RTV_NOERR;
}

static U32 Init (NAND_DRV_CFG *cfg) {
  U32 cs;

  /* Configure Power Management Controller: Enable SMC and PIO clocks */
  PMC->PMC_WPMR  = PMC_WPDIS_KEY;                   /* Disable write protect  */
  PMC->PMC_PCER0 = (1 << ID_SMC) | (1 << ID_PIOA) | (1 << ID_PIOC);
  PMC->PMC_WPMR  = PMC_WPEN_KEY;                    /* Enable write protect   */

  /* PIO Write Protect Disable */
  PIOC->PIO_WPMR = PIO_WPDIS_KEY;
  
  /* Configure SMC I/O pins */
  PIOC->PIO_ABCDSR[0] &= ~SMC_PIO_ABCDSR_PIN_MSK;
  PIOC->PIO_ABCDSR[1] &= ~SMC_PIO_ABCDSR_PIN_MSK;

  PIOC->PIO_PDR    = SMC_PIO_PDR_PIN_MSK;

  /* Configure ready/busy pin (PC18) */
  PIOC->PIO_PER    = PIO_PER_P18;
  PIOC->PIO_ODR    = PIO_ODR_P18;
  PIOC->PIO_PUDR   = PIO_PUDR_P18;

  /* Configure chip select pin */
#if   NAND_HW_CS == SMC_NCS0
  /* Chip enable 0: PC14 - NCS0 [nCE] */
  PIOC->PIO_PDR    = PIO_PDR_P14;
  PIOC->PIO_PUER   = PIO_PUER_P14;
#elif NAND_HW_CS == SMC_NCS1
  /* Chip enable 1: PC15 - NCS1 [nCE] */
  PIOC->PIO_PDR    = PIO_PDR_P15;
  PIOC->PIO_PUER   = PIO_PUER_P15;
#elif NAND_HW_CS == SMC_NCS2
  /* Chip enable 2: PA22 - NCS2 [nCE] */
  PIOA->PIO_PDR    = PIO_PDR_P22;
  PIOA->PIO_PUER   = PIO_PUER_P22;
#elif NAND_HW_CS == SMC_NCS3
  /* Chip enable 3: PC12 - NCS3 [nCE] */
  PIOC->PIO_PDR    = PIO_PDR_P12;
  PIOC->PIO_PUER   = PIO_PUER_P12;
#endif

  /* PIO Write Protect Enable */
  PIOC->PIO_WPMR = PIO_WPEN_KEY;

  /* Assign Chip Select to a NAND Flash in the Matrix */
  MATRIX->CCFG_SMCNFCS = 1 << NAND_HW_CS;

  /* Disable SMC Write Protection */
  SMC->SMC_WPMR = SMC_WPDIS_KEY;

  /* Configure timing and signals */
  cs = NAND_HW_CS;

  SMC->SMC_CS_NUMBER[cs].SMC_SETUP =   (0 <<  0) | // Write Enable Setup Length
                                       (1 <<  8) | // CS Setup length in Write Access
                                       (0 << 16) | // Read Enable Setup Length
                                       (1 << 24) ; // CS Setup length in Read Access

  SMC->SMC_CS_NUMBER[cs].SMC_PULSE =   (3 <<  0) | // Write Enable Pulse Length
                                       (4 <<  8) | // CS Pulse length in Write Access
                                       (3 << 16) | // Read Enable Pulse Length
                                       (4 << 24) ; // CS Pulse length in Read Access

  SMC->SMC_CS_NUMBER[cs].SMC_CYCLE =   (4 <<  0) | // Total Write Cycle Length
                                       (7 << 16) ; // Total Read Cycle Length

  SMC->SMC_CS_NUMBER[cs].SMC_MODE =    (1 <<  0) | // read is controlled by NRD signal
                                       (1 <<  1) ; // write is controlled by NWE signal

  /* Disable Scrambling */
  SMC->SMC_OCMS = 0x00;

  /* Reset NAND chip */
  WrCmd (NAND_CMD_RESET);
  
  if (WaitReady() == NAND_BUSY) {
    /* Reset failed */
    return ERR_NAND_HW_TOUT;
  }
  /* Check status */
  if (ChkStatus (NAND_STAT_RDY) != NAND_FLAG_SET) {
    return ERR_NAND_HW_TOUT;
  }
  /* NAND is ready */
  return RTV_NOERR;
}
